Train and test bayes

--- a/Lab01/IMDBdataset.ipynb
+++ b/Lab01/IMDBdataset.ipynb
@@ -2,125 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14a15c47904149c1976464d6f9aa3b93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading builder script:   0%|          | 0.00/4.31k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e7c667d9c62428e96efd7e90ee96004",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading metadata:   0%|          | 0.00/2.17k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "593b4dee9da14ca8955c9e2cb94babc0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/7.59k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading and preparing dataset imdb/plain_text to /home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0...\n"
+      "Found cached dataset imdb (/home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4715108aa944402daed878330f3371ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/84.1M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "205c98a7b79147fdb43ab863c62357ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/25000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e690e28a078492cb4638451834033c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating test split:   0%|          | 0/25000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a591e438715e48d187d37ecea7816c94",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating unsupervised split:   0%|          | 0/50000 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset imdb downloaded and prepared to /home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "057dcf0b647c4b4d9b203af257084071",
+       "model_id": "e83e1df53fc7463e94e23ad2a014919c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +65,7 @@
        "})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,31 +85,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DatasetInfo(description='Large Movie Review Dataset.\\nThis is a dataset for binary sentiment classification containing substantially more data than previous benchmark datasets. We provide a set of 25,000 highly polar movie reviews for training, and 25,000 for testing. There is additional unlabeled data for use as well.', citation='@InProceedings{maas-EtAl:2011:ACL-HLT2011,\\n  author    = {Maas, Andrew L.  and  Daly, Raymond E.  and  Pham, Peter T.  and  Huang, Dan  and  Ng, Andrew Y.  and  Potts, Christopher},\\n  title     = {Learning Word Vectors for Sentiment Analysis},\\n  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},\\n  month     = {June},\\n  year      = {2011},\\n  address   = {Portland, Oregon, USA},\\n  publisher = {Association for Computational Linguistics},\\n  pages     = {142--150},\\n  url       = {http://www.aclweb.org/anthology/P11-1015}\\n}\\n', homepage='http://ai.stanford.edu/~amaas/data/sentiment/', license='', features={'text': Value(dtype='string', id=None), 'label': ClassLabel(names=['neg', 'pos'], id=None)}, post_processed=None, supervised_keys=None, task_templates=[TextClassification(task='text-classification', text_column='text', label_column='label')], builder_name='imdb', config_name='plain_text', version=1.0.0, splits={'train': SplitInfo(name='train', num_bytes=33432823, num_examples=25000, shard_lengths=None, dataset_name='imdb'), 'test': SplitInfo(name='test', num_bytes=32650685, num_examples=25000, shard_lengths=None, dataset_name='imdb'), 'unsupervised': SplitInfo(name='unsupervised', num_bytes=67106794, num_examples=50000, shard_lengths=None, dataset_name='imdb')}, download_checksums={'https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz': {'num_bytes': 84125825, 'checksum': None}}, download_size=84125825, post_processing_size=None, dataset_size=133190302, size_in_bytes=217316127)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of positive labels in train split:  0.5\n",
+      "Proportion of positive labels in test split:  0.5\n",
+      "Proportion of negative labels in train split:  0.5\n",
+      "Proportion of negative labels in test split:  0.5\n"
+     ]
     }
    ],
    "source": [
-    "# get info about the unsupervised splits\n",
-    "dataset[\"unsupervised\"].info"
+    "pos_train = sum(dataset[\"train\"][\"label\"]) / len(dataset[\"train\"][\"label\"])\n",
+    "pos_test = sum(dataset[\"test\"][\"label\"]) / len(dataset[\"test\"][\"label\"])\n",
+    "neg_train = 1 - pos_train\n",
+    "neg_test = 1 - pos_test\n",
+    "\n",
+    "print(\"Proportion of positive labels in train split: \", pos_train)\n",
+    "print(\"Proportion of positive labels in test split: \", pos_test)\n",
+    "print(\"Proportion of negative labels in train split: \", neg_train)\n",
+    "print(\"Proportion of negative labels in test split: \", neg_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. 25000 rows for the train split and 25000 for the test split."
+    "3. 50% of positive/negative label are in the train split and test plit.\n",
+    "\n",
+    "## Naive Bayes Classifier"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an adpated preprocessing function which at least lowers the text and replace punctuations with spaces\n",
+    "# You can use from string import punctuation to get a list of punctuations, maybe not all punctuations should be removed\n",
+    "from string import punctuation\n",
+    "import numpy as np\n",
+    "\n",
+    "def preprocess_function(dataset):\n",
+    "    '''\n",
+    "        Input: dataset\n",
+    "        Output: train_docs, test_docs, train_classes, test_classes\n",
+    "    '''\n",
+    "    punct = punctuation.replace(\"-\", \"\")\n",
+    "    # lower and change punctuation into spaces and replace multiple spaces for only one\n",
+    "    train_docs = np.array([text.lower().translate(str.maketrans(punct, \" \" * len(punct))) for text in dataset[\"train\"][\"text\"]])\n",
+    "    test_docs = np.array([text.lower().translate(str.maketrans(punct, \" \" * len(punct))) for text in dataset[\"train\"][\"text\"]])\n",
+    "    train_classes = np.array(dataset[\"train\"][\"label\"])\n",
+    "    test_classes = np.array(dataset[\"test\"][\"label\"])\n",
+    "    return train_docs, test_docs, train_classes, test_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n",
+    "def train_naive_bayes(docs: np.ndarray, classes: np.ndarray):\n",
+    "    '''\n",
+    "        Input: docs, classes\n",
+    "        Output: log_prior, log_likelihood, vocab\n",
+    "    '''\n",
+    "    # Get each word uniquely in the docs\n",
+    "    vocab = np.unique(np.concatenate([text.split() for text in docs]))\n",
+    "    \n",
+    "    Ndoc = len(docs)\n",
+    "\n",
+    "    # Get the number of different classes\n",
+    "    unique_classes = np.unique(classes)\n",
+    "    for c in unique_classes:\n",
+    "        Nc = sum(classes == c)\n",
+    "\n",
+    "        # Compute the log prior probability of class c\n",
+    "        log_prior = math.log(Nc / Ndoc)\n",
+    "        \n",
+    "        # create bigdoc which is an histogram of the words in the docs of class c\n",
+    "        bigdoc = np.concatenate([text.split() for text in docs[classes == c]])\n",
+    "        histo = np.array([sum(bigdoc == word) for word in vocab])\n",
+    "\n",
+    "        # Compute the log likelihood of each word in the vocabulary for class c\n",
+    "        log_likelihood = np.log((histo + 1) / (len(bigdoc) + len(vocab)))\n",
+    "        print('Half done')\n",
+    "    \n",
+    "    return log_prior, log_likelihood, vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_naive_bayes(test_doc: str, log_prior: float, log_likelihood: np.ndarray, unique_test_classes: np.ndarray, vocab: np.ndarray):\n",
+    "    '''\n",
+    "        Input: test_doc, log_prior, log_likelihood, test_classes, vocab\n",
+    "        Output: accuracy\n",
+    "    '''\n",
+    "    sums = np.zeros(len(unique_test_classes))\n",
+    "    for c in unique_test_classes:\n",
+    "        # Compute the log posterior probability of class c\n",
+    "        log_posterior = log_prior + sum(log_likelihood[np.where(np.isin(vocab, test_doc.split()))])\n",
+    "        sums[c] = log_posterior\n",
+    "    return np.argmax(sums)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(25000,) (25000,) (25000,) (25000,)\n",
+      "(95669,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Call the preprocessing function\n",
+    "train_docs, test_docs, train_classes, test_classes = preprocess_function(dataset)\n",
+    "print(train_docs.shape, test_docs.shape, train_classes.shape, test_classes.shape)\n",
+    "vocab = np.unique(np.concatenate([text.split() for text in train_docs]))\n",
+    "print(vocab.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7528\n",
+      "ok\n",
+      "yes\n",
+      "no\n",
+      "0.0 (7528,) (7528,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the model with a hundrendth of the training data\n",
+    "log_prior, log_likelihood, vocab = train_naive_bayes(train_docs[:int(len(train_docs)/100)], train_classes[:int(len(train_classes)/100)])\n",
+    "print(log_prior, log_likelihood.shape, vocab.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test the model with for 1000 test data\n",
+    "unique_test_classes = np.unique(test_classes)\n",
+    "accuracy = 0\n",
+    "for i in range(25000):\n",
+    "    accuracy += test_naive_bayes(test_docs[i], log_prior, log_likelihood, unique_test_classes, vocab) == test_classes[i]\n",
+    "accuracy /= 25000\n",
+    "print(accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
