classifier using sklearn

--- a/Lab01/IMDBdataset.ipynb
+++ b/Lab01/IMDBdataset.ipynb
@@ -896,13 +896,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.81768"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# bayes classifier with sklearn\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "count_vect = CountVectorizer()\n",
+    "X_train_counts = count_vect.fit_transform(df_train['text'])\n",
+    "X_train_counts.shape\n",
+    "\n",
+    "clf = MultinomialNB().fit(X_train_counts, df_train['label'])\n",
+    "\n",
+    "X_test_counts = count_vect.transform(df_test['text'])\n",
+    "y_pred = clf.predict(X_test_counts)\n",
+    "y_true = df_test['label']\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "accuracy\n"
    ]
   }
  ],
