--- a/Lab01/IMDBdataset.ipynb
+++ b/Lab01/IMDBdataset.ipynb
@@ -925,7 +925,8 @@
     "y_pred = clf.predict(X_test_counts)\n",
     "y_true = df_test['label']\n",
     "accuracy = accuracy_score(y_true, y_pred)\n",
-    "accuracy\n"
+    "accuracy\n",
+    " "
    ]
   }
  ],
