Changed name of report

--- a/Lab01/TP1_NLP.ipynb
+++ b/Lab01/TP1_NLP.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### TP1 done by Litoux Pierre, Arsenec Charles-André, Deplagne Hugo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 280,
    "metadata": {},
