corrected some errors

--- a/Lab02/TP2_NLP.ipynb
+++ b/Lab02/TP2_NLP.ipynb
@@ -140,7 +140,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La fonction getFeatures sort un vecteur contenant les 6 'features' demandées et 1 'feature' bonus qui compte le nombre de mot utilisant la négation. "
+    "\n",
+    "The getFeature function outputs a vector containing the 6 features needed and 1 bonus feature wich is the number of negation words.\n",
+    "\n",
+    "A negation word is a word wich negate a sentance like \"not\" or \"don't\""
    ]
   },
   {
@@ -197,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Appliquons l'obtention des 'features' à nos dataframes et regroupont le résultat dans `df_train_features` et `df_test_features` :"
+    "We regroup our features into the dataframes `df_train_features` and `df_test_features` :"
    ]
   },
   {
@@ -335,7 +338,7 @@
    ],
    "source": [
     "df_train_features = pandasToFeatures(df_train)\n",
-    "df_test_features = pandasToFeatures(df_train)\n",
+    "df_test_features = pandasToFeatures(df_test)\n",
     "df_train_features.head()"
    ]
   },
@@ -578,8 +581,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "results :\n",
+    "training accuracy : 0.726\n",
+    "validation accuracy : 0.7025\n",
+    "test acccuracy : 0.7132\n",
+    "\n",
     "We can see that the classifier is more accurate than random on all the datasets although it is less accurate than our Naive Bayes Classifier. \n",
-    "The validation set accuracy and the testing set accuracy are quite close so our model does not overfit a lot."
+    "The validation set accuracy and the testing set accuracy are quite close so our model does not overfit."
    ]
   },
   {
@@ -627,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Bonus] The parameter weight_decay of the SGD optimizer corresponds to the L2 penalty. Try playing with this value and explain how it influence the model's weights."
+    "### [Bonus] The parameter weight_decay of the SGD optimizer corresponds to the L2 penalty. Try playing with this value and explain how it influence the model's weights."
    ]
   },
   {
@@ -811,6 +819,14 @@
     "\n",
     "# compare pytorch and scikit-learn accuracy\n",
     "print(\"scikit : \" ,accuracy_score(y_test, y_pred),\"pytorch : \", test_accuracy)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **\\[Bonus\\]** Train logistic regression classifier using the [scikit-learn implementation](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html). How does it compare with the PyTorch version?"
    ]
   },
   {
