--- a/Lab03/TP3_NLP_Fasttext.ipynb
+++ b/Lab03/TP3_NLP_Fasttext.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "f7e402d1-f6f5-4ee5-8cde-813c2a2b4ee1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pili/anaconda3/envs/scia/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from copy import deepcopy\n",
     "from functools import partial\n",
@@ -43,6 +52,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7da5404a",
+   "metadata": {},
+   "source": [
+    "# Datasets and splits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "a13d7994",
@@ -52,28 +70,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset imdb (/home/pierre/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "004024ba0ec94676888dec3d4afc01bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading cached split indices for dataset at /home/pierre/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/pierre/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
+      "Found cached dataset imdb (/home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 850.02it/s]\n",
+      "Loading cached split indices for dataset at /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/pili/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
      ]
     },
     {
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "149d25dd",
    "metadata": {},
    "outputs": [
@@ -118,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "__label__positive after reading the other tepid reviews and comments  i felt i had to come to bat for this movie   roeg s films tend to have little to do with one another  and expecting this one to be like one of his you liked is probably off the mark   what this film is is a thoughtful and unabashed look at religious faith  the only other film like it-in terms of its religious message-would have to be tolkin s  the rapture    i am astonished that anyone could say the story is muddled or supernatural  it is a simple movie about catholic faith  miracles  and redemption--though you would never guess it till the end  it is also the only movie i can think of whose resolution turns  literally  on a pun   as a  happily  fallen catholic myself  i know what the movie is about  and i find a sort of fondness in its ultimate innocence about the relation between god and man  but if you are not familiar with the kind of theology on which the film is based  then it will go right over you head   as a film-as opposed to a story- cold heaven  it is not ground-breaking  while  the rapture  is heavy with pictorial significance and cinematic imagery   cold heaven  downplays its own cinematic qualities  there are no striking shots  no edgy effects  no attempts to fit the content to the form  it is workmanlike shooting  but subdued  nor does it have dialogue or acting to put it in a class of high drama  it is a simple story that unfolds simply  it may seem odd  but at the end the mystery is revealed  it looks ambiguous  but with a single line the ambiguity vanishes in a puff of catholic dogma   in this regard   cold heaven  has at its heart exactly the same sort of thing that drives a movie like  the sting   or  the sixth sense   or  final descent   or polanski s  a pure formality   all of these are films with a trick up their sleeves  they may frustrate you along the way  but they have a point-an obvious one  indeed--but the fun is  at least in part  in having been taken in   still  even if it seems like little more than a shaggy dog story with a punch line  it is worth watching for way it directs-and misdirects-you  try it-especially if you are  or have ever been  a catholic \n",
+      "__label__positive sterling and younger brother try to survive on land  being squeezed by big cattlemen  when  rogue  brother preston arrives  a moral dilemma ensues  john  drew  barrymore steals the show as the younger  impressionable brother-barrymore shows signs here that he could have been an acting powerhouse  moves at a nice pace to an exciting climax \n",
       "\n"
      ]
     }
@@ -193,15 +192,22 @@
       "Read 4M words\n",
       "Number of words:  86069\n",
       "Number of labels: 2\n",
-      "Progress: 100.0% words/sec/thread: 2654061 lr:  0.000000 avg.loss:  0.359210 ETA:   0h 0m 0s\n"
+      "Progress: 100.0% words/sec/thread: 3100510 lr:  0.000000 avg.loss:  0.401143 ETA:   0h 0m 0s"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on the training set: 0.9028\n",
-      "Accuracy on the test set: 0.8756\n"
+      "Accuracy on the training set: 0.8959\n",
+      "Accuracy on the test set: 0.8696\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "s\n"
      ]
     }
    ],
@@ -241,7 +247,7 @@
       "Read 4M words\n",
       "Number of words:  86069\n",
       "Number of labels: 2\n",
-      "Progress: 100.0% words/sec/thread: 1215143 lr:  0.000000 avg.loss:  0.042706 ETA:   0h 0m 0s\n"
+      "Progress: 100.0% words/sec/thread: 1065783 lr:  0.000000 avg.loss:  0.036241 ETA:   0h 0m 0s\n"
      ]
     },
     {
@@ -249,8 +255,8 @@
      "output_type": "stream",
      "text": [
       "Accuracy on the training set: 1.0\n",
-      "Accuracy on the validation set: 0.8972\n",
-      "Accuracy on the test set: 0.8936\n"
+      "Accuracy on the validation set: 0.896\n",
+      "Accuracy on the test set: 0.89584\n"
      ]
     }
    ],
@@ -336,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "09e9a58b",
    "metadata": {},
    "outputs": [
@@ -344,15 +350,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line :  __label__negative to truly appreciate this film you had to be there  acting   or have been a crew member   yes  i am  selena   and at the ripe old age of 42  have serious doubts about what we were doing did   it all started out to be like a  john waters  type thing  friends acting badly in bad films  somewhere along the line the fun discontinued  people who were supposed to be friends didn t speak anymore  and bad became worse   i regret the bad image i might have projected  try to fit in size one gold spandex pants    other than that  the film sucks so badly  i would not even make my mama watch it   to my director  cast and crew i say    why can t we just all get along    it s been over twenty years  people                    \n",
+      "Line :  __label__positive an interesting companion piece to true documentaries of john c  holmes  unfortunately  it doesn t deal with what ultimately killed holmes  and it certainly could have benefited from doing so  burt reynolds and mark wahlberg got the most praise for this  but i felt the true stars were julianne moore as the cocaine-sniffing mother wannabe  don cheadle as a black man struggling with identity as pornstar stereo-salesman in some wild getups and william h  macy  who s wife is the ultimate slut  not to mention a nearly unrecognizable alfred molina  macy s new year s eve bash and cheadle s chance for a better life after a donut shop robbery gone wildly wrong are probably the two best scenes in the movie  or at least the two best shot  what this movie does best is show how power can easily corrupt in its various forms  however  none of the characters apparently learn anything from their dark downward spiral as they all rebound and return to their normal lives \n",
       "\n",
-      "Prediction :  __label__positive \n",
-      "Label :  __label__negative \n",
+      "Prediction :  __label__negative \n",
+      "Label :  __label__positive \n",
       "\n",
-      "Line :  __label__negative i couldn t even sit through the whole thing  this movie was a piece of crap  i had more fun watching  dont  tell mom the babysitter s dead   it was just too painful to watch  say  besides  austin powers   has tom arnold ever been in a hit movie \n",
+      "Line :  __label__positive this is another film where the cinematography is the best thing to recommend it  that would be fine if the film were a travelogue  but as a dramatic exercise in cinematic artistry  that is not good enough  the theme of inter-species respect and co-operation ventures timidly into the forbidden world of inter-species love  but its approach is stereotypical  indicating a lack of understanding of the behavior motives of either species  as with many films  one always wonders what could have been achieved by a more innovative director and a more creative screenwriter  alas  we probably will never know \n",
       "\n",
-      "Prediction :  __label__positive \n",
-      "Label :  __label__negative \n",
+      "Prediction :  __label__negative \n",
+      "Label :  __label__positive \n",
       "\n"
      ]
     }
@@ -363,7 +369,7 @@
     "labels = []\n",
     "with open(\"test.txt\", \"r\") as f:\n",
     "    for i, line in enumerate(f.readlines()):\n",
-    "        predicted_label = format_label(hyper_model.predict(line.split()[1:])[0][0])\n",
+    "        predicted_label = hyper_model.predict(line.split()[1:])[0][0][0]\n",
     "        true_label = line.split()[0]\n",
     "        if predicted_label != true_label:\n",
     "            print(\"Line : \", line)\n",
@@ -381,7 +387,19 @@
    "id": "8a038dee",
    "metadata": {},
    "source": [
-    "# TODO : expliquer pk c'est des mauvaises predictions"
+    "#### Because of the shuffle the results are not reprodictable\n",
+    "\n",
+    "### Above we have two examples of wrong predictions :  \n",
+    "#### The first one :  \n",
+    "an interesting companion piece to true documentaries of john c  holmes  unfortunately  it doesn t deal with what ultimately killed holmes  and it certainly could have benefited from doing so  burt reynolds and mark wahlberg got the most praise for this  but i felt the true stars were julianne moore as the cocaine-sniffing mother wannabe  don cheadle as a black man struggling with identity as pornstar stereo-salesman in some wild getups and william h  macy  who s wife is the ultimate slut  not to mention a nearly unrecognizable alfred molina  macy s new year s eve bash and cheadle s chance for a better life after a donut shop robbery gone wildly wrong are probably the two best scenes in the movie  or at least the two best shot  what this movie does best is show how power can easily corrupt in its various forms  however  none of the characters apparently learn anything from their dark downward spiral as they all rebound and return to their normal lives\n",
+    "\n",
+    "#### is labelled as negative but our code labelled it as positive, surely because the review is neutral\n",
+    "\n",
+    "#### The second one :  \n",
+    "this is another film where the cinematography is the best thing to recommend it  that would be fine if the film were a travelogue  but as a dramatic exercise in cinematic artistry  that is not good enough  the theme of inter-species respect and co-operation ventures timidly into the forbidden world of inter-species love  but its approach is stereotypical  indicating a lack of understanding of the behavior motives of either species  as with many films  one always wonders what could have been achieved by a more innovative director and a more creative screenwriter  alas  we probably will never know \n",
+    "\n",
+    "#### is labelled as negative but our code labelled it as positive, it may be because the review starts with a simingly very positive sentence\n",
+    "￼Votre réponse\n"
    ]
   },
   {
@@ -413,6 +431,15 @@
     "print(\"model minn:\".ljust(20), str(model.minn).ljust(30), \"| hyper_model minn:\".ljust(30), hyper_model.minn)\n",
     "print(\"model maxn:\".ljust(20), str(model.maxn).ljust(30), \"| hyper_model maxn:\".ljust(30), hyper_model.maxn)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "916f4f6d",
+   "metadata": {},
+   "source": [
+    "The little we understood about maxn and minn is that they refers to the char n-grams, a char n-gram is a n-length sequence from a word, since we are working in english woth no defined length for words it may seems useless in our case and it may expalin why they stay at 0"
+   ]
   }
  ],
  "metadata": {
@@ -431,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.2"
   },
   "vscode": {
    "interpreter": {
