--- a/NLP2/Lab01/01 code your own RNN.ipynb
+++ b/NLP2/Lab01/01 code your own RNN.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f26c411e-1cd5-4a1c-9b3d-de16e26db901",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,8 @@
     "from torchtext.vocab import vocab, Vocab\n",
     "from torchtext.data.utils import get_tokenizer\n",
     "\n",
-    "from tqdm.auto import tqdm"
+    "from tqdm.auto import tqdm\n",
+    "from collections import OrderedDict, Counter"
    ]
   },
   {
@@ -44,10 +45,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "42b598f9-36b5-43e3-bb25-488b0fb53aac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset imdb (/home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d5afcaa99d9a44a2bfed029c4bb4fe87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached split indices for dataset at /home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-5f37fd0866e4f89f.arrow and /home/coartix/.cache/huggingface/datasets/imdb/plain_text/1.0.0/d613c88cf8fa3bab83b4ded3713f1f74830d1100e171db75bbddb80b3345c9c0/cache-dd5732a0e6ac784c.arrow\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "((20000, 2), (5000, 2), (25000, 2))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset = load_dataset(\"imdb\")\n",
     "train_dataset = dataset[\"train\"].train_test_split(\n",
@@ -73,6 +113,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "152b550c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6e42911326ab4af39d35c2dcd7560d0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/20000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "min_freq = 5\n",
+    "tokenizer = get_tokenizer(\"basic_english\", language=\"en\")\n",
+    "\n",
+    "tokens = []\n",
+    "unk_token = \"<unk>\"\n",
+    "pad_token = \"<pad>\"\n",
+    "for text in tqdm(train_df['text'], total=len(train_df)):\n",
+    "    tokens += tokenizer(text)\n",
+    "vocab = vocab(OrderedDict(sorted(Counter(tokens).items(), key=lambda x: x[1], reverse=True)), min_freq=min_freq, specials=[pad_token, unk_token])\n",
+    "vocab.set_default_index(vocab[unk_token])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e495aa0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0 1 2\n",
+      "the\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vocab['<unk>'], vocab['<pad>'], vocab['out of vocabulary'], vocab['the'])\n",
+    "# get the word at index 1 in vocab\n",
+    "print(vocab.get_itos()[2])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "89386d66-f758-4d87-b786-9d570eb22f2f",
    "metadata": {},
@@ -86,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3f6fc4eb-2f25-43ee-8b2f-a9154545ebc6",
    "metadata": {},
    "outputs": [],
@@ -102,7 +197,32 @@
     "        tokenizer: a text tokenizer.\n",
     "    Returns:\n",
     "        A tensor of IDs (torch.long).\n",
-    "    \"\"\"\n"
+    "    \"\"\"\n",
+    "    return torch.tensor(\n",
+    "        [vocabulary[token] for token in tokenizer(text)], dtype=torch.long\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5040173f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  14,   10,    6, 2148])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test the function\n",
+    "vectorize_text(\"This is a test\", vocab, tokenizer)"
    ]
   },
   {
@@ -203,13 +323,16 @@
    "source": [
     "## Classifier (3 points)\n",
     "\n",
-    "**\\[3 points\\]** Code your own RNN. Fill the `RNN` class correctly. Remember, an RNN has 3 elements.\n",
-    "* An embedding layer to turn one-hot vectors into dense vectors.\n",
-    "* A linear layer which takes the concatenation of the current embedding and hidden layer and send it to the hidden layer of our next step.\n",
-    "  * `embedding_size + hidden_size -> hidden_size`\n",
-    "* A linear layer which takes the concatenation of the current embedding and hidden layer and send it to the output.\n",
-    "  * `embedding_size + hidden_size -> 1`\n",
-    "* The provided `init_hidden` function sho"
+    "**\\[3 points\\]** Code your own RNN. Fill the `RNN` class correctly. Remember an RNN has 3 matrices and an embedding layer (see course slide 61).\n",
+    "* The embedding layer turns a one-hot vectors into dense vectors.\n",
+    "* The first matrix (W) connects the embedding to the hidden layer.\n",
+    "  * `embedding_size -> hidden_size`\n",
+    "* The second matrix (U) connect the previous hidden layer to the current one.\n",
+    "  * `hidden_size -> hidden_size`\n",
+    "* These to vectors are added and go through an activation function (e.g. $h_t = tanh(Wx_i+Uh_{t-1})$).\n",
+    "* The last matrix (V) connects the hidden layer to the hidden layer to the output.\n",
+    "  * `hidden_size -> 1`\n",
+    "* Donc forget to add an `init_hidden` function which initialize the first hidden layer to 0."
    ]
   },
   {
@@ -250,7 +373,7 @@
     "n_hidden = 64\n",
     "model = RNN(len(vocabulary.get_itos()), n_embedding, n_hidden).to(device)\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters())"
+    "optimizer = torch.optim.RMSprop(model.parameters(), lr=0.001)"
    ]
   },
   {
@@ -288,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
